--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.8.1",
+    "mongodb": "^6.3.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "sharp": "^0.33.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "eslint": "^8",
